# bot_arb

./: .env.example  .gitignore  Cargo.toml  arbitrum-bot.service  arbitrum-rpc-cache.service  deploy-aws.sh  docker-compose.yml  download-and-start.sh  download-final.sh  download-robust.sh  download-snapshot-resume.sh  download-snapshot.sh  download-stream.sh  foundry.toml  init-snapshot.sh  pla_arb_3.md  plan_07.md  plan_arb_2.md  plan_arbitrum.md  plan_lat.md  plan_loan.md  plan_ml_1.md  plan_onchain.md  pool_pairs_arb_targets.md  setup-nitro.sh  setup-node.sh  start.sh  upgrade-aws.sh
.claude/: settings.local.json
cache/: solidity-files-cache.json
contracts/: ArbExecutor.sol
foundry/: foundry.toml
foundry/script/: Deploy.s.sol
foundry/test/: ArbExecutor.t.sol
ml/: README.md  collector.py  feature_extractor.py  model_stats.json  model_v2_stats.json  onchain_observer.py  pool_discovery.py  scorer.py  threshold.json  train.py  train_v2.py
rpc-cache/: Cargo.toml
rpc-cache/src/: main.rs
src/: config.rs  dryrun.rs  main.rs  sim.rs  telegram.rs
src/arb/: mod.rs
src/decoder/: mod.rs
src/executor/: mod.rs
src/feed/: mod.rs
src/gmx/: mod.rs
src/liquidation/: mod.rs
src/pools/: indexer.rs  mod.rs  tracker.rs
src/scanner/: mod.rs  sniper.rs
src/timeboost/: mod.rs
src/wallet/: mod.rs
tools/sst-extractor/: Cargo.toml
tools/sst-extractor/src/: main.rs
tools/stream-download/: Cargo.toml
tools/stream-download/src/: main.rs
tools/tar-pool-scanner/: Cargo.toml
tools/tar-pool-scanner/src/: main.rs
