[package]
name = "sst-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = { version = "0.22", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
alloy-primitives = "1"
rlp = "0.6"
sha3 = "0.10"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
